--- a/app/src/main/res/layout/category_list.xml
+++ b/app/src/main/res/layout/category_list.xml
@@ -9,20 +9,36 @@
         android:id="@+id/category_card_view"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginBottom="16dp"
         android:layout_gravity="center"
-        card_view:contentPadding="8dp"
-        card_view:cardCornerRadius="4dp">
+        android:layout_marginBottom="16dp"
+        card_view:cardCornerRadius="4dp"
+        card_view:contentPadding="8dp">
 
-        <ImageView
-            android:id="@+id/category_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
-
-        <TextView
-            android:id="@+id/category_name"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/category_image"
+                android:layout_width="128dp"
+                android:layout_height="128dp"
+                android:layout_centerInParent="true" />
+
+            <TextView
+                android:id="@+id/category_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="#7000"
+                android:gravity="center"
+                android:paddingBottom="15dp"
+                android:paddingTop="15dp"
+                android:text="Тест текст"
+                android:textColor="#FFF"
+                android:textSize="14sp"
+                android:textStyle="bold"/>
+        </RelativeLayout>
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
