--- a/app/src/main/res/layout/fragment_drawer.xml
+++ b/app/src/main/res/layout/fragment_drawer.xml
@@ -12,6 +12,7 @@
         android:background="@drawable/mt_background">
 
         <RelativeLayout
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
