--- a/app/src/main/res/layout/fragment_drawer.xml
+++ b/app/src/main/res/layout/fragment_drawer.xml
@@ -3,17 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DDD"
+    android:orientation="vertical"
 
     tools:context="pro.aliens.intenrent_store_android.fragment.DrawerFragment">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/top_drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="128dp"
         android:background="@drawable/mt_background">
 
         <RelativeLayout
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">
@@ -22,16 +24,25 @@
                 android:id="@+id/user_picture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
                 android:src="@drawable/round" />
 
             <TextView
-                android:textColor="#FFF"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/user_picture"
-                android:text="John Smith" />
+                android:text="John Smith"
+                android:textColor="#FFF" />
         </RelativeLayout>
-    </LinearLayout>
+    </RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:id="@+id/drawer_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
 
 </LinearLayout>
