--- a/app/src/main/res/layout/drawer_list.xml
+++ b/app/src/main/res/layout/drawer_list.xml
@@ -2,6 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="48dp"
+    android:clickable="true"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:gravity="center_vertical"
+    android:background="?attr/selectableItemBackground"
     android:baselineAligned="true">
     <ImageView
         android:id="@+id/drawer_ico"
