--- a/app/src/main/res/layout/category_list.xml
+++ b/app/src/main/res/layout/category_list.xml
@@ -7,9 +7,11 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/category_card_view"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
         card_view:cardCornerRadius="4dp"
         card_view:contentPadding="8dp">
