--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -22,10 +22,11 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <fragment
-                android:name="pro.aliens.intenrent_store_android.fragment.MainFragment"
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:layout="@layout/fragment_main" />
+                android:name="pro.aliens.intenrent_store_android.fragment.ProductListFragment"
+                tools:layout="@layout/fragment_product_list" />
         </FrameLayout>
     </android.support.design.widget.CoordinatorLayout>
 
