--- a/app/src/main/res/layout/category_list.xml
+++ b/app/src/main/res/layout/category_list.xml
@@ -17,6 +17,7 @@
         card_view:contentPadding="8dp">
 
         <RelativeLayout
+            android:id="@+id/category_container"
             android:clickable="true"
             android:background="?android:selectableItemBackground"
             android:layout_width="match_parent"
