--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="drawer_width">280dp</dimen>
     <dimen name="status_bar_margin_top">24dp</dimen>
+    <dimen name="badge_text_size">14sp</dimen>
 </resources>
