--- a/app/src/main/res/layout/product_list.xml
+++ b/app/src/main/res/layout/product_list.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_marginBottom="16dp"
     card_view:cardCornerRadius="4dp"
     card_view:contentPadding="8dp">
 
@@ -43,12 +43,31 @@
                 android:textSize="16sp"
                 tools:text="200 P" />
 
-            <Button
-                android:id="@+id/add_to_cart"
+            <EditText
+                android:id="@+id/edit_count_to_cart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="add" />
+                android:inputType="number" />
+
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/add_to_cart"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorAccent"
+                android:text="to cart"
+                android:textColor="#FFF" />
+        </LinearLayout>
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
 
