--- a/app/src/main/res/layout/product_list.xml
+++ b/app/src/main/res/layout/product_list.xml
@@ -31,7 +31,7 @@
             tools:text="name product words" />
 
         <LinearLayout
-            android:id="@+id/price-wrapp"
+            android:id="@+id/price_wrapp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/product_name"
@@ -53,7 +53,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_below="@id/price-wrapp"
+            android:layout_below="@id/price_wrapp"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
